# snake-plusplus

./: .gitignore  .travis.yml  CMakeLists.txt  Main.cpp  README.md  travis.sh
SDL2_Standardproject/: CMakeLists.txt  GameBoard.cpp  GameBoard.h  GameData.cpp  GameData.h  GameManager.cpp  GameManager.h  GameObject.cpp  GameObject.h  InputManager.h  Node.cpp  Node.h  Point2D.cpp  Point2D.h  SDL2_Standardproject.vcxproj  SDL2_Standardproject.vcxproj.filters  Snake.cpp  Snake.h
SDL2_Standardproject/SDL/: SDLBmp.cpp  SDLBmp.h  SDLError.cpp  SDLManager.h  SDLWindow.h
SnakePlusPlusTests/: CMakeLists.txt
SnakePlusPlusTests/basic_tests/: CMakeLists.txt  GameBoard_tests.cpp  Node_tests.cpp  Point2D_tests.cpp  basic_check.cpp
SnakePlusPlusTests/lib/googletest/: CMakeLists.txt
SnakePlusPlusTests/lib/googletest-master/: CMakeLists.txt  README.md
SnakePlusPlusTests/lib/googletest-master/googlemock/: CMakeLists.txt  README.md
SnakePlusPlusTests/lib/googletest-master/googlemock/docs/: CheatSheet.md  CookBook.md  ForDummies.md
SnakePlusPlusTests/lib/googletest-master/googlemock/docs/v1_5/: CheatSheet.md  CookBook.md
SnakePlusPlusTests/lib/googletest-master/googlemock/docs/v1_6/: CheatSheet.md  CookBook.md
SnakePlusPlusTests/lib/googletest-master/googlemock/docs/v1_7/: CheatSheet.md  CookBook.md
SnakePlusPlusTests/lib/googletest-master/googlemock/include/gmock/: gmock-generated-nice-strict.h  gmock-matchers.h  gmock-more-matchers.h  gmock-spec-builders.h  gmock.h
SnakePlusPlusTests/lib/googletest-master/googlemock/scripts/: fuse_gmock_files.py
SnakePlusPlusTests/lib/googletest-master/googlemock/src/: gmock-spec-builders.cc  gmock.cc
SnakePlusPlusTests/lib/googletest-master/googlemock/test/: gmock-actions_test.cc  gmock-cardinalities_test.cc  gmock-generated-actions_test.cc  gmock-generated-function-mockers_test.cc  gmock-generated-internal-utils_test.cc  gmock-generated-matchers_test.cc  gmock-internal-utils_test.cc  gmock-matchers_test.cc  gmock-more-actions_test.cc  gmock-nice-strict_test.cc  gmock-port_test.cc  gmock-spec-builders_test.cc  gmock_all_test.cc  gmock_link_test.h  gmock_output_test.py  gmock_output_test_.cc  gmock_test.cc  gmock_test_utils.py
SnakePlusPlusTests/lib/googletest/cmake/: internal_utils.cmake
SnakePlusPlusTests/lib/googletest/docs/: Primer.md  V1_5_Primer.md  V1_6_Primer.md  V1_7_Primer.md
SnakePlusPlusTests/lib/googletest/include/gtest/: gtest-death-test.h  gtest-param-test.h  gtest-typed-test.h  gtest.h  gtest_prod.h
SnakePlusPlusTests/lib/googletest/include/gtest/internal/: gtest-death-test-internal.h  gtest-internal.h  gtest-param-util-generated.h  gtest-param-util.h  gtest-port.h  gtest-type-util.h
SnakePlusPlusTests/lib/googletest/samples/: prime_tables.h  sample10_unittest.cc  sample1_unittest.cc  sample2_unittest.cc  sample3_unittest.cc  sample5_unittest.cc  sample6_unittest.cc  sample7_unittest.cc  sample8_unittest.cc  sample9_unittest.cc
SnakePlusPlusTests/lib/googletest/scripts/: fuse_gtest_files.py  gen_gtest_pred_impl.py
SnakePlusPlusTests/lib/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest.cc
SnakePlusPlusTests/lib/googletest/test/: gtest-death-test_ex_test.cc  gtest-death-test_test.cc  gtest-filepath_test.cc  gtest-listener_test.cc  gtest-options_test.cc  gtest-param-test_test.cc  gtest-port_test.cc  gtest-printers_test.cc  gtest-typed-test_test.cc  gtest-unittest-api_test.cc  gtest_all_test.cc  gtest_break_on_failure_unittest.py  gtest_catch_exceptions_test.py  gtest_environment_test.cc  gtest_filter_unittest.py  gtest_filter_unittest_.cc  gtest_help_test.py  gtest_help_test_.cc  gtest_list_tests_unittest.py  gtest_list_tests_unittest_.cc  gtest_no_test_unittest.cc  gtest_output_test.py  gtest_output_test_.cc  gtest_pred_impl_unittest.cc  gtest_repeat_test.cc  gtest_shuffle_test.py  gtest_stress_test.cc  gtest_throw_on_failure_ex_test.cc  gtest_throw_on_failure_test.py  gtest_throw_on_failure_test_.cc  gtest_unittest.cc  gtest_xml_outfiles_test.py  gtest_xml_output_unittest.py  gtest_xml_output_unittest_.cc  gtest_xml_test_utils.py
